[twitter] blind attempt at fixing overflow problems

--- a/graphics/style/base.css
+++ b/graphics/style/base.css
@@ -50,6 +50,7 @@ body {
 
 #sponsorsAndTwitter {
     position: absolute;
+    overflow: hidden;
 }
 
 .fullscreen {
